# kernel-msm

./: .gitignore  Android.bp  Android.mk  AndroidKernel.mk  BUILD.bazel  CVE_2016_2465.patch.txt  CVE_2016_2468.patch.txt  Kbuild  Kconfig  LICENSE.txt  MAINTAINERS  Makefile  README  README-MMI-OPP27.91-113.txt  blair.bzl  build.config  build.config.allmodconfig  build.config.common  build.config.gki.aarch64  build.config.moto  build.config.msm.autoghgvm  build.config.msm.bengal  build.config.msm.common  build.config.msm.gen4auto  build.config.msm.gen4auto.lxc  build.config.msm.gki  build.config.msm.iot  build.config.msm.kalama  build.config.msm.kona.le  build.config.msm.parrot  build.config.msm.qcs405  build.config.msm.qcs605  build.config.msm.trinket  build.config.msm.waipio  build.config.net_test  build.config.svelte  build.targets  build_a1.config  build_kernel_GRIFFIN.sh  build_with_bazel.py  (+34 more)
Documentation/: 00-INDEX  gpio.txt  kernel-parameters.txt
android/: ACK_SHA  GKI_VERSION  abi_gki_aarch64  abi_gki_aarch64_amlogic  abi_gki_aarch64_arg  abi_gki_aarch64_cuttlefish  abi_gki_aarch64_db845c  abi_gki_aarch64_exynos  abi_gki_aarch64_exynos_wear  abi_gki_aarch64_fcnt  abi_gki_aarch64_galaxy  abi_gki_aarch64_general  abi_gki_aarch64_honor  abi_gki_aarch64_microsoft  abi_gki_aarch64_mtk  abi_gki_aarch64_oplus  abi_gki_aarch64_pasa  abi_gki_aarch64_pixel  abi_gki_aarch64_qcom  abi_gki_aarch64_rockchip  abi_gki_aarch64_rtktv  abi_gki_aarch64_sony  abi_gki_aarch64_sunxi  abi_gki_aarch64_transsion  abi_gki_aarch64_tuxera  abi_gki_aarch64_type_visibility  abi_gki_aarch64_unisoc  abi_gki_aarch64_virtual_device_removed  abi_gki_aarch64_vivo  abi_gki_aarch64_xiaomi
arch/: Kconfig
block/: Kconfig.iosched  Makefile  bfq-cgroup.c  bfq.h  bio.c  (+24 more)
drivers/staging/qcacld-2.0/tools/: Makefile.am  configure.ac
drivers/staging/qcacld-2.0/tools/athdiag/: Android.mk  Makefile  Makefile.am  athdiag.c
drivers/staging/qcacld-2.0/tools/fwdebuglog/: Android.mk  Makefile  Makefile.am  cld-diag-parser.c  cld-diag-parser.h  cld-fwlog-netlink.c  cld-fwlog-parser.c  cld-fwlog-record.c  nan-parser.c  parser.c
drivers/staging/qcacld-2.0/tools/pktlog/: Android.mk  Makefile  Makefile.am  pktlogconf.c
(+16353 files in other folders)
